# fake-minecraft-server

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.example.yml  docker-compose.yml
.github/workflows/: build.yml  ci.yml  docker.yml  release.yml
src/: config.rs  main.rs  models.rs  protocol.rs  server.rs  shutdown.rs
