[package]
name = "fake-minecraft-server"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "fake-server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.45.0", features = [
  "macros",
  "rt-multi-thread",
  "net",
  "io-util",
  "signal",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
base64 = "0.22.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
